[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://CharaIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyRT.gd" type="Script" id=4]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noise" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharaList" type="ItemList" parent="."]
anchor_top = 0.776667
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
max_columns = 4
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 120, 90 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 0.604492
anchor_bottom = 0.401667
__meta__ = {
"_edit_use_anchors_": true
}

[node name="img" type="HBoxContainer" parent="HBox"]
margin_right = 618.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="front" type="TextureRect" parent="HBox/img"]
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureRect" parent="HBox/img"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -33.0
margin_right = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.713876
anchor_top = 0.145208
anchor_right = 0.975594
anchor_bottom = 0.568541
__meta__ = {
"_edit_use_anchors_": true
}

[node name="story" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_bottom = 58.0
alignment = 2

[node name="story" type="OptionButton" parent="story"]
margin_right = 205.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="Level" type="OptionButton" parent="story"]
margin_top = 31.0
margin_right = 205.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "Easy"
items = [ "Easy", null, false, 0, null, "Standard", null, false, 1, null, "Hard", null, false, 2, null, "Expert", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -27.0
margin_right = 54.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Config" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSet" type="Button" parent="Config"]
margin_right = 91.0
margin_bottom = 27.0
text = "Card"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenario" type="Button" parent="Config"]
margin_top = 31.0
margin_right = 91.0
margin_bottom = 58.0
text = "Scenario"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EncounterSet" type="Button" parent="Config"]
margin_top = 62.0
margin_right = 91.0
margin_bottom = 89.0
text = "Encounter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyRT" type="RichTextLabel" parent="Enemy"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -204.0
margin_right = 434.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 852.0
margin_bottom = 728.0
columns = 4

[node name="CharaIcon" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 210.0
margin_bottom = 240.0

[node name="CharaIcon5" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_right = 424.0
margin_bottom = 240.0

[node name="CharaIcon6" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_right = 638.0
margin_bottom = 240.0

[node name="CharaIcon7" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 852.0
margin_bottom = 240.0

[node name="CharaIcon8" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 244.0
margin_right = 210.0
margin_bottom = 484.0

[node name="CharaIcon9" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_top = 244.0
margin_right = 424.0
margin_bottom = 484.0

[node name="CharaIcon10" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 244.0
margin_right = 638.0
margin_bottom = 484.0

[node name="CharaIcon2" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_top = 244.0
margin_right = 852.0
margin_bottom = 484.0

[node name="CharaIcon3" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 488.0
margin_right = 210.0
margin_bottom = 728.0

[node name="CharaIcon4" parent="ScrollContainer/GridContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_top = 488.0
margin_right = 424.0
margin_bottom = 728.0
[connection signal="item_activated" from="CharaList" to="." method="_on_CharaList_item_activated"]
[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="story/Level" to="." method="_on_Level_item_selected"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Config/CardSet" to="." method="_on_CardSet_pressed"]
[connection signal="pressed" from="Config/Scenario" to="." method="_on_Scenario_pressed"]
[connection signal="pressed" from="Config/EncounterSet" to="." method="_on_EncounterSet_pressed"]
